# rubiks-cube-tracker

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  Makefile  README.md  TODO.txt  extract_rgb_pixels.py  pyproject.toml  requirements.dev.txt  requirements.txt  rubiks_2x2x2_solver.py  setup.py  test.py
rubikscubetracker/: __init__.py
rubikssquareextractor/: __init__.py
test/: test.py
test-data/: 2x2x2-random-01.txt  2x2x2-random-02.txt  2x2x2-random-03.txt  2x2x2-random-04.txt  3x3x3-random-01.txt  3x3x3-random-02.txt  3x3x3-random-03.txt  3x3x3-random-04.txt  3x3x3-random-05.txt  3x3x3-random-09.txt  4x4x4-random-01.txt  4x4x4-random-02.txt  5x5x5-random-01.txt  5x5x5-random-02.txt  5x5x5-random-03.txt  5x5x5-random-04.txt  6x6x6-random-01.txt  6x6x6-random-02.txt  6x6x6-solved-02.txt  7x7x7-random-01.txt
test/test-data/: 3x3x3-random-01.txt  3x3x3-random-03.txt  3x3x3-random-05.txt  3x3x3-random-06.txt  3x3x3-random-07.txt  3x3x3-random-08.txt  3x3x3-random-09.txt  3x3x3-random-10.txt  4x4x4-random-02.txt  4x4x4-random-03.txt  4x4x4-random-04.txt  4x4x4-random-05.txt  4x4x4-random-06.txt  4x4x4-random-07.txt  5x5x5-random-01.txt  6x6x6-random-03.txt  6x6x6-random-04.txt  6x6x6-solved-01.txt  6x6x6-solved-02.txt  7x7x7-random-01.txt  7x7x7-random-02.txt  7x7x7-random-03.txt
