[tool.black]
line-length = 120
target_version = ['py36']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.vscode
    | \.idea
    | _build
    | buck-out
    | build
    | dist
    | venv
  )/
)
'''

# packages that are required for setup.py to run must be listed here
[build-system]
requires=["setuptools==49.2.0", "wheel==0.34.2"]
